--- a/PSC-SBC-2024-main/ProjetoGUI/nbproject/private/private.properties
+++ b/PSC-SBC-2024-main/ProjetoGUI/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\e009412\\AppData\\Roaming\\NetBeans\\20\\build.properties
+user.properties.file=C:\\Users\\Bruno\\AppData\\Roaming\\NetBeans\\20\\build.properties
