--- a/PSC-SBC-2024-main/ProjetoGUI/nbproject/private/private.properties
+++ b/PSC-SBC-2024-main/ProjetoGUI/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.mysql-connector-java-8.0.21__1_.jar=C:\\Users\\82322180\\Downloads\\mysql-connector-java-8.0.21 (1).jar
-user.properties.file=C:\\Users\\82322180\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-8.0.21__1_.jar=C:\\Users\\Bruno\\Desktop\\mysql-connector-java-8.0.21.jar
+user.properties.file=C:\\Users\\Bruno\\AppData\\Roaming\\NetBeans\\20\\build.properties
